// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reject invalid dates 1`] = `
[
  {
    "code": "is_nan",
    "path": [],
  },
]
`;

exports[`should reject other values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "date",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should reject other values 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "date",
    "path": [],
    "received": "string",
  },
]
`;

exports[`should reject other values 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "date",
    "path": [],
    "received": "object",
  },
]
`;
